--- a/Site_Eletrônico/index.html
+++ b/Site_Eletrônico/index.html
@@ -21,7 +21,7 @@
                         <a class="nav-link active" href="#">Página Inicial</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Carrinho</a>
+                        <a class="nav-link" href="cart.html">Carrinho</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contato</a>
